--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1026,7 +1026,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpCdDh9Zip button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1517,7 +1517,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpCdDh9Zip button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2055,7 +2055,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpCdDh9Zip button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2593,7 +2593,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpCdDh9Zip button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3131,7 +3131,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpCFu2aITQ button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3669,7 +3669,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpCFLzdtb6 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4210,7 +4210,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpEPk4q1P4 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4715,7 +4715,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpGtM90p6g button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -5335,7 +5335,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpGtQgCnQd button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -6908,7 +6908,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpGvzdPfxC button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -7474,7 +7474,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpGEYvoMVX button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -8094,7 +8094,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpGENyQwVb button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -8714,7 +8714,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpGAo5JJRA button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -9226,7 +9226,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpGwhP1wc2 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -9738,7 +9738,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpGwcMw7w4 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -10466,7 +10466,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpGDx22h8w button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -10978,7 +10978,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpGvI67uKM button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -11598,7 +11598,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpGvrjmzvC button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -12110,7 +12110,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpGvhibf8F button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -12622,7 +12622,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpGv70yi57 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -13350,7 +13350,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpGuYveg5b button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -14024,7 +14024,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpGuDiGMWH button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -14623,7 +14623,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpCFDfGJtW button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -15128,7 +15128,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #9fdbf8;
+  background-color: #000000;
 }
 .cid-tpFYJ6216J button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
